fix(resources): horizontal scroll when fields are too long (maybe crop instead?)

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,3 +1,3 @@
-.App {
+.App main.section {
+  overflow: auto;
 }
-
